@@ -10,6 +10,8 @@ VERSION 1.3.0  (??? ?? 2006)
 
 VERSION 1.2.9  (May 18 2006)
 ------------------------------------------------------------------------------
+- David Keegel <djk@cybersource.com.au> now responsible for release
+  management
 - Added utils/rsnapreport.pl, written by William Bear.
 - Detect exit status 23 and 24 from rsync in rsync_cleanup_after_native_cp_al
 - Add $! (system error message) to various warning messages in native_cp_al
